--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/owl.carousel.min.css">
     <link rel="stylesheet" href="./css/owl.theme.default.css">
+    <link rel="stylesheet" href="./fonts/Gilroy/stylesheet.css">
+    <link rel="stylesheet" href="./fonts/Circe/stylesheet.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css"
           integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
 
@@ -15,9 +17,50 @@
 </head>
 <body>
 <section>
+    <div class="container-fluid mobile-menu-container">
+        <div class="row mobile-menu">
+            <div class="col-auto px-0">
+                <button class="btn-menu" data-toggle="modal" data-target="#mobile-modal-menu">
+                    <img src="./assets/icon-menu.png" width="25" alt="">
+                </button>
+                <div class="modal fade" tabindex="-1" role="dialog" id="mobile-modal-menu">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content mobile-modal-menu-container">
+                            <button class="btn-menu" data-dismiss="modal" >
+                                <img src="./assets/icon-x.png" width="12" alt="">
+                            </button>
+                            <p class="menu-name">О компании</p>
+                            <ul class="menu-list">
+                                <li><a href="catalog.html">Каталог продукции</a></li>
+                                <li><a href="about.html">О компании</a></li>
+                                <li><a href="sales.html">Акции</a></li>
+                                <li><a href="franshize.html">Франшиза</a></li>
+                                <li><a href="magazines.html">Фирменные магазины</a></li>
+                                <li><a href="#">Политика конфиденциальности</a></li>
+                            </ul>
+                            <p class="menu-name">Украшения</p>
+                            <ul class="menu-list">
+                                <li><a href="catalog.html">Каталог продукции</a></li>
+                                <li><a href="about.html">О компании</a></li>
+                                <li><a href="sales.html">Акции</a></li>
+                                <li><a href="franshize.html">Франшиза</a></li>
+                                <li><a href="magazines.html">Фирменные магазины</a></li>
+                                <li><a href="#">Политика конфиденциальности</a></li>
+                            </ul>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <div class="col-auto ml-auto px-0">
+                <button class="button btn-blue"><img src="./assets/icon-btn-phone.png" height="15" alt="">Позвонить
+                </button>
+            </div>
+        </div>
+    </div>
     <div class="container-fluid header-container">
         <div class="row justify-content-around align-items-center">
-            <div class="col-auto">
+            <div class="col-12 col-lg-auto order-1 order-lg-0">
                 <div class="city-block">
                     <div class="icon">
                         <img src="./assets/icon-geo.png" alt="">
@@ -31,7 +74,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-auto">
+            <div class="col-12 col-lg-auto order-2 order-lg-1">
                 <div class="phone-block ">
                     <div class="icon">
                         <img src="./assets/icon-phone.png" alt="" height="16">
@@ -46,10 +89,10 @@
                 </div>
 
             </div>
-            <div class="col-auto">
+            <div class="col-12 col-lg-auto logo order-0 order-lg-2">
                 <img src="./assets/logo@2x.png" alt="" width="196">
             </div>
-            <div class="col-auto">
+            <div class="col-12 col-lg-auto text-center order-3 order-lg-3">
                 <div class="phone-block ">
                     <div class="icon">
                         <img src="./assets/icon-phone.png" alt="" height="16">
@@ -65,12 +108,12 @@
                     </div>
                 </div>
             </div>
-            <div class="col-auto">
+            <div class="col-auto d-none d-lg-block order-lg-4">
                 <button class="button btn-blue">Заказать звонок</button>
             </div>
         </div>
     </div>
-    <div class="container top-nav">
+    <div class="container top-nav d-none d-xl-block">
         <div class="row top-nav--row">
             <div class="col-auto top-nav--item"><a href="index.html">Главная</a></div>
             <div class="col-auto top-nav--item"><a href="catalog.html">Каталог продукции</a></div>
@@ -81,7 +124,19 @@
         </div>
     </div>
 </section>
-
+<section class="mobile-header-slider-section">
+    <div class="owl-theme owl-carousel mobile-header-slider">
+        <div>
+            <img src="./assets/mobile-header-slider/1.png" alt="">
+        </div>
+        <div>
+            <img src="./assets/mobile-header-slider/1.png" alt="">
+        </div>
+        <div>
+            <img src="./assets/mobile-header-slider/1.png" alt="">
+        </div>
+    </div>
+</section>
 <section class="header-slider">
     <button class="slider-arrow left">
 
@@ -446,13 +501,13 @@
 <footer>
     <div class="container">
         <div class="row justify-content-between align-items-center">
-            <div class="col-auto text-center">
+            <div class="col-12 col-lg-auto text-center pic-block">
                 <img src="./assets/logo@2x.png" width="196" alt="" class="logo">
                 <p class="copyright">© 2018 год АО «Чистое Серебро»</p>
                 <p><a href="tel:7 (800) 775-68-37" class="phone">7 (800) 775-68-37</a></p>
                 <button class="button btn-blue">Заказать звонок</button>
             </div>
-            <div class="col-auto">
+            <div class="col-auto d-none d-lg-block">
                 <div class="footer-menu">
                     <p class="footer-menu--name">О компании</p>
                     <a href="#" class="footer-menu--item">Каталог продукции</a>
@@ -463,7 +518,7 @@
                     <a href="#" class="footer-menu--item">Политика конфиденциальности</a>
                 </div>
             </div>
-            <div class="col-auto">
+            <div class="col-auto d-none d-lg-block">
                 <div class="footer-menu">
                     <p class="footer-menu--name">Украшения</p>
                     <a href="#" class="footer-menu--item">Кольца</a>
@@ -474,7 +529,7 @@
                     <a href="#" class="footer-menu--item">Другое</a>
                 </div>
             </div>
-            <div class="col-auto">
+            <div class="col-12 col-lg-auto">
                 <div class="footer-menu">
                     <p class="footer-menu--name">Способ оплаты</p>
                     <div class="payment-block">
@@ -518,7 +573,8 @@
 <script>
     var jewelerySlider = $('.jelewelery-slider'),
         hitsSlider = $('.hits-slider'),
-        headerSlider = $('.header-slider .slider-constructor');
+        headerSlider = $('.header-slider .slider-constructor'),
+        mobileHeaderSlider = $('.mobile-header-slider');
 
     jewelerySlider.owlCarousel({
         dots: true,
@@ -561,6 +617,13 @@
     });
     $('.header-slider .right').on('click', function () {
         headerSlider.trigger('next.owl.carousel')
+    });
+    mobileHeaderSlider.owlCarousel({
+        dots: true,
+        items: 1,
+        margin: 0,
+        loop: true,
+        autoHeight: true
     });
 </script>
 </body>
