--- a/catalog.html
+++ b/catalog.html
@@ -211,9 +211,10 @@
 
 <section class="breadcrumbs">
     <div class="container">
-        <div class="row px-0">
-            <a href="#" class="breadcrumb-item">Главная</a>
-            <a href="#" class="breadcrumb-item">Каталог продукции</a>
+        <div class="row ">
+            <div class="col-auto px-lg-0">
+                <a href="#" class="breadcrumb-item">Главная</a>
+                <a href="#" class="breadcrumb-item">Каталог продукции</a></div>
         </div>
     </div>
 </section>
@@ -221,11 +222,11 @@
 <section class="catalog">
     <div class="container">
         <div class="row">
-            <div class="col-12 px-0">
+            <div class="col-12 px-lg-0">
                 <h3 class="main-header">Каталог</h3>
 
             </div>
-            <div class="col-12 col-xl-3 catalog-menu px-0">
+            <div class="col-12 col-xl-3 mb-4 px-lg-0 catalog-menu">
                 <div class="row menu-row mx-0">
                     <a href="#" class="catalog-menu-item">Браслеты <img src="./assets/menu-arrow.png" alt=""
                                                                         class="ml-auto"></a>
@@ -241,7 +242,7 @@
                                                                      class="ml-auto"></a>
                 </div>
             </div>
-            <div class="col-12 col-xl-9 pr-0 catalog-grid-container">
+            <div class="col-12 col-xl-9 pr-lg-0 catalog-grid-container">
                 <div class="row mx-0">
                     <div class="catalog-item">
                         <div class="promo-label">
