--- a/sales.html
+++ b/sales.html
@@ -211,9 +211,10 @@
 
 <section class="breadcrumbs">
     <div class="container">
-        <div class="row px-0">
-            <a href="#" class="breadcrumb-item">Главная</a>
-            <a href="#" class="breadcrumb-item">Акции</a>
+        <div class="row ">
+            <div class="col-auto px-lg-0">
+                <a href="#" class="breadcrumb-item">Главная</a>
+                <a href="#" class="breadcrumb-item">Каталог продукции</a></div>
         </div>
     </div>
 </section>
