--- a/about.html
+++ b/about.html
@@ -223,13 +223,13 @@
     <div class="container">
         <div class="row ">
             <div class="col-8 mx-auto text-center px-0">
-                <h1 class="text-deepBlue fw-bold text-uppercase circe">О компании</h1>
+                <h1 class="main-header">О компании</h1>
                 <p class="primary-text circe">АО «Чистое Серебро» на ювелирном рынке с 2005 года. Наши магазины, имея
                     богатый опыт и накопленные традиции, идет в ногу со временем, при этом мы всегда остаемся собой.</p>
             </div>
             <div class="col-12  promo-block">
                 <div class="row">
-                    <div class="col-4 text-center offset-1 promo-description">
+                    <div class="col-12 col-lg-4 text-center offset-lg-1 promo-description">
                         <img src="./assets/logo@2x.png" alt="">
                         <div class="splitter">
                             <div class="split-item-white"></div>
@@ -249,7 +249,7 @@
 <section class="about-quality">
     <div class="container">
         <div class="row">
-            <div class="col-5">
+            <div class="col-12 col-lg-5">
                 <h3 class="text-blue fw-bold ">Качество</h3>
                 <p class="primary-text circe">Наш подход к качеству одинаков к любому изделию, выпускаемому заводом. Для
                     всех видов изделий используется только высококачественное сырье и банковская чистота золота.
@@ -262,12 +262,12 @@
 </section>
 
 <section class="about-proof">
-    <div class="container px-0">
+    <div class="container px-lg-0">
         <div class="row align-items-center">
-            <div class="col-5">
+            <div class="col-5 d-none d-lg-block">
                 <img src="./assets/ring-about-proof.png" alt="" class="img-fluid">
             </div>
-            <div class="col-4 px-0 ml-auto">
+            <div class="col-12 col-lg-5 px-lg-0 ml-auto">
                 <h3 class="text-blue fw-bold ">Доверие</h3>
                 <p class="primary-text circe">Наши покупатели на протяжении многих лет остаются с нами, ждут выхода
                     новых коллекций, новых авторских работ, а это лучшее признание и награда для производителя.</p>
