--- a/magazines.html
+++ b/magazines.html
@@ -258,12 +258,12 @@
         </div>
         <div class="magazine-row">
             <div class="description-block">
-                <h4 class="pl-4">
+                <h4 class="pl-xl-4">
                     <span class="city">МОСКВА</span>
                     ТРЦ водный
                 </h4>
 
-                <div class="contacts-block pl-4">
+                <div class="contacts-block pl-xl-4">
                     <div class="contact"><img src="./assets/magazine/geo-icon.png" width="26" alt=""> <span
                             class="contact-text">ул. Авиаконструктора Микояна, д.1 </span></div>
                     <div class="contact"><img src="./assets/magazine/phone-icon.png" width="26" alt=""> <a
